@@ -5,6 +5,7 @@
 package com.serotonin.m2m2.rt.script;
 
 import com.infiniteautomation.mango.statistics.StartsAndRuntimeList;
+import com.serotonin.m2m2.rt.dataImage.types.DataValue;
 
 /**
  * @author Terry Packer
@@ -19,16 +20,25 @@ public class BinaryStartsAndRuntimeListWrapper extends StartsAndRuntimeListWrapp
 		super(statistics);
 	}
 
-    public boolean getFirstValue() {
-    	if(statistics.getFirstValue() == null)
-    		return false;
-    	else
-    		return statistics.getFirstValue().getBooleanValue();
+	public Boolean getStartValue() {
+	    DataValue value = getStartDataValue();
+        if(value == null)
+            return null;
+        else
+            return value.getBooleanValue();
     }
-    public boolean getLastValue() {
-    	if(statistics.getLastValue() == null)
-    		return false;
-    	else
-    		return statistics.getLastValue().getBooleanValue();
+    public Boolean getFirstValue() {
+        DataValue value = getFirstDataValue();
+        if(value == null)
+            return null;
+        else
+            return value.getBooleanValue();
+    }
+    public Boolean getLastValue() {
+        DataValue value = getLastDataValue();
+        if(value == null)
+            return null;
+        else
+            return value.getBooleanValue();
     }
 }
