@@ -118,6 +118,7 @@ The following fields can be useful for conversions:</p>
   <li><b>average</b>: (float) the average value of the point over the period</li>
   <li><b>integral</b>: (float) the integral value of the point over the period</li>
   <li><b>sum</b>: (float) the sum of all value updates over the period (appropriate for pulse counting)</li>
+  <li><b>startValue</b>: (float) the value before or exactly at the period start time</li>
   <li><b>firstValue</b>: (float) the first value in the period</li>
   <li><b>firstTime</b>: (integer) the time of the first value</li>
   <li><b>lastValue</b>: (float) the last value in the period</li>
@@ -139,6 +140,7 @@ The following fields can be useful for conversions:</p>
   <li><b>periodStartTime</b> (integer) the start time used for the calculation </li>
   <li><b>periodEndTime</b> (integer) the end time used for the calculation </li>
   <li><b>count</b> (integer) count of the total number of entries
+  <li><b>startValue</b>: the value before or exactly at the period start time</li>
   <li><b>firstValue</b>: the first value in the period</li>
   <li><b>firstTime</b>: (integer) the time of the first value</li>
   <li><b>lastValue</b>: the last value in the period</li>
